[package]
name = "zenoh-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cobs = { version = "0.3.0", default-features = false }
embedded-io = "0.6.1"
defmt = { version = "0.3", optional = true }
thiserror = { version = "2", default-features = false }
embedded-hal = "1.0.0"

[dev-dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
defmt-rtt = "0.4.1"
defmt = "0.3.8"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embedded-hal-compat = { version = "0.13.0", features = ["embedded-io"] }
nb = "1.1.0"

[target.thumbv7m-none-eabi.dev-dependencies.stm32f1xx-hal]
features = ["rt", "stm32f103"]
version = "0.10.0"

[lib]
harness = false

[features]
default = ["defmt"]
defmt = ["cobs/defmt", "embedded-io/defmt-03", "embedded-hal/defmt-03", "dep:defmt"]
